--- a/css/global.css
+++ b/css/global.css
@@ -2,10 +2,6 @@
   box-sizing: border-box;
 }
 
-html {
-  overflow-x: hidden;
-}
-
 button {
   cursor: pointer;
 }
