--- a/css/reviews.css
+++ b/css/reviews.css
@@ -1,6 +1,7 @@
 .loved-section {
   padding-top: 40px;
   padding-bottom: 40px;
+  overflow-x: hidden;
 }
 
 @media screen and (min-width: 768px) {
